docs/7.52/md/abenabap_data_communication.md
---
title: "Data Interfaces and Communication Interfaces"
description: |
  This section describes ABAP statements and programming interfaces for communication with other systems and programs and their associated data exchange formats. -   RFC - Remote Function Call(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc.htm) -   ICF - Internet Communication F
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm"
abapFile: "abenabap_data_communication.htm"
keywords: ["do", "method", "class", "data", "abenabap", "communication"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) → 

Data Interfaces and Communication Interfaces

This section describes ABAP statements and programming interfaces for communication with other systems and programs and their associated data exchange formats.

-   [RFC - Remote Function Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc.htm)

-   [ICF - Internet Communication Framework](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf.htm)

-   [ABAP Channels](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_channels.htm)

-   [ADF - ABAP Daemon Framework](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_daemon.htm)

-   [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm)

-   [ABAP and JSON](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json.htm)

-   [ABAP and OLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenole2.htm)

-   [ABAP and Operating System Statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands.htm)

-   [PCP - Push Channel Protocol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpcp.htm)

-   [Access to the Presentation Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfrontend_services.htm)

-   [System Class for UUIDs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_system_uuid.htm)

Detailed documentation about all SAP communication interfaces can be found in Documentation Connectivity in [SAP Help Portal](http://help.sap.com).

Note

Alongside the external communication methods listed here, there are also several [obsolete data interfaces and communication interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenextern_obsolete.htm).

Continue
[RFC - Remote Function Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc.htm)
[ICF - Internet Communication Framework](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf.htm)
[ABAP Channels](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_channels.htm)
[ADF - ABAP Daemon Framework](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_daemon.htm)
[ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm)
[ABAP and JSON](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json.htm)
[ABAP and OLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenole2.htm)
[ABAP and Operating System Statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands.htm)
[PCP - Push Channel Protocol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpcp.htm)
[Access to the Presentation Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfrontend_services.htm)
[System Class for UUIDs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_system_uuid.htm)
[Internal Statement for System Function Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_communication_internal.htm)