docs/7.57/md/abenabap_data_communication.md
---
title: "Data Interfaces and Communication Interfaces"
description: |
  This section describes ABAP statements and programming interfaces for communication with other systems and programs and their associated data exchange formats. -   RFC - Remote Function Call(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc.htm) -   ICF - Internet Communication F
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm"
abapFile: "abenabap_data_communication.htm"
keywords: ["do", "if", "method", "class", "data", "abenabap", "communication"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Data Interfaces and Communication Interfaces, ABENABAP_DATA_COMMUNICATION, 757%0D%0A%
0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Data Interfaces and Communication Interfaces

This section describes ABAP statements and programming interfaces for communication with other systems and programs and their associated data exchange formats.

-   [RFC - Remote Function Call](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc.htm)
-   [ICF - Internet Communication Framework](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf.htm)
-   [ABAP Channels](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_channels.htm)
-   [ADF - ABAP daemon framework](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_daemon.htm)
-   [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm)
-   [ABAP and JSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json.htm)
-   [ABAP and OLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenole2.htm)
-   [ABAP and Operating System Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_system_commands.htm)
-   [EPP - Extended Passport](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenepp.htm)
-   [PCP - Push Channel Protocol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpcp.htm)
-   [Access to the Presentation Server](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfrontend_services.htm)
-   [System Class for UUIDs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_system_uuid.htm)

Detailed documentation about all SAP communication interfaces can be found in the documentation Connectivity in SAP Help Portal.

Hint

In addition to the external communication methods listed here, there are also [obsolete data interfaces and communication interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextern_obsolete.htm).

Continue
[Remote Function Call (RFC)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc.htm)
[Internet Communication Framework (ICF)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf.htm)
[ABAP Channels](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_channels.htm)
[ABAP Daemon Framework (ADF)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_daemon.htm)
[ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm)
[ABAP and JSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json.htm)
[ABAP and OLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenole2.htm)
[ABAP and Operating System Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_system_commands.htm)
[Extended Passport (EPP)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenepp.htm)
[Push Channel Protocol (PCP)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpcp.htm)
[Access to the Presentation Server](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfrontend_services.htm)
[System Class for UUIDs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_system_uuid.htm)
[Internal Statement for System Function Call](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_communication_internal.htm)